; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_swap_state.c_free_pages_and_swap_cache.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_swap_state.c_free_pages_and_swap_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }

@PAGEVEC_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @free_pages_and_swap_cache(%struct.page** %0, i32 %1) #0 {
  %3 = alloca %struct.page**, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.page**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.page** %0, %struct.page*** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.page**, %struct.page*** %3, align 8
  store %struct.page** %8, %struct.page*** %5, align 8
  %9 = call i32 (...) @lru_add_drain()
  br label %10

10:                                               ; preds = %31, %2
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %42

13:                                               ; preds = %10
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @PAGEVEC_SIZE, align 4
  %16 = call i32 @min(i32 %14, i32 %15)
  store i32 %16, i32* %6, align 4
  store i32 0, i32* %7, align 4
  br label %17

17:                                               ; preds = %28, %13
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %6, align 4
  %20 = icmp slt i32 %18, %19
  br i1 %20, label %21, label %31

21:                                               ; preds = %17
  %22 = load %struct.page**, %struct.page*** %5, align 8
  %23 = load i32, i32* %7, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.page*, %struct.page** %22, i64 %24
  %26 = load %struct.page*, %struct.page** %25, align 8
  %27 = call i32 @free_swap_cache(%struct.page* %26)
  br label %28

28:                                               ; preds = %21
  %29 = load i32, i32* %7, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %7, align 4
  br label %17

31:                                               ; preds = %17
  %32 = load %struct.page**, %struct.page*** %5, align 8
  %33 = load i32, i32* %6, align 4
  %34 = call i32 @release_pages(%struct.page** %32, i32 %33, i32 0)
  %35 = load i32, i32* %6, align 4
  %36 = load %struct.page**, %struct.page*** %5, align 8
  %37 = sext i32 %35 to i64
  %38 = getelementptr inbounds %struct.page*, %struct.page** %36, i64 %37
  store %struct.page** %38, %struct.page*** %5, align 8
  %39 = load i32, i32* %6, align 4
  %40 = load i32, i32* %4, align 4
  %41 = sub nsw i32 %40, %39
  store i32 %41, i32* %4, align 4
  br label %10

42:                                               ; preds = %10
  ret void
}

declare dso_local i32 @lru_add_drain(...) #1

declare dso_local i32 @min(i32, i32) #1

declare dso_local i32 @free_swap_cache(%struct.page*) #1

declare dso_local i32 @release_pages(%struct.page**, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
